--- a/package.json
+++ b/package.json
@@ -18,24 +18,25 @@
         "@types/react-dom": "^16.9.8",
         "@types/shelljs": "^0.8.8",
         "env-cmd": "10.0.1",
+        "node-fetch": "^2.6.1",
+        "prompt-sync": "^4.2.0",
         "shelljs": "^0.8.3",
         "typescript": "^4.2.2"
     },
     "scripts": {
         "dev": "NODE_OPTIONS='--inspect' next dev",
-
         "build": "next build && next export",
         "index-html": "node ./scripts/index_html",
         "sync-s3": "env-cmd -e production node ./scripts/upload_bucket",
-        
         "compile-lambdas": "tsc -p backend/tsconfig.sam.json",
         "sam-build": "env-cmd -e production node ./scripts/sam_build",
         "sam-package": "env-cmd -e production node ./scripts/sam_package",
         "sam-deploy": "env-cmd -e production node ./scripts/sam_deploy",
-
         "deploy": "yarn run deploy:backend && yarn run deploy:frontend",
         "deploy:backend": "yarn run compile-lambdas && yarn run sam-build && yarn run sam-deploy",
-        "deploy:frontend": "yarn run build && yarn run index-html && yarn run sync-s3"
+        "deploy:frontend": "yarn run build && yarn run index-html && yarn run sync-s3",
+        "blog:get": "env-cmd -e production node ./scripts/blog_get_article",
+        "blog:post": "env-cmd -e production node ./scripts/blog_post_article"
     },
     "eslintConfig": {
         "extends": [
