--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
         "@types/react": "^16.9.53",
         "@types/react-dom": "^16.9.8",
         "@types/shelljs": "^0.8.8",
+        "autoprefixer": "^10.2.5",
         "env-cmd": "10.0.1",
         "node-fetch": "^2.6.1",
+        "postcss": "^8.2.15",
         "prompt-sync": "^4.2.0",
         "shelljs": "^0.8.3",
+        "tailwindcss": "^2.1.2",
         "typescript": "^4.2.2"
     },
     "scripts": {
