--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "private": true,
     "dependencies": {
         "aws-amplify": "^3.3.20",
-        "next": "10.0.7",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
+        "next": "^11.0.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-markdown": "^5.0.3"
     },
     "devDependencies": {
