--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "env-cmd": "10.0.1",
         "eslint": "^7.29.0",
         "eslint-config-next": "^11.0.1",
+        "eslint-config-prettier": "^8.3.0",
         "node-fetch": "^2.6.1",
         "postcss": "^8.2.15",
         "prettier": "^2.3.2",
