--- a/package.json
+++ b/package.json
@@ -1,65 +1,67 @@
 {
-    "name": "john-wrights-personal-website",
-    "description": "A personal landing page and blog for John Wright Stanly",
-    "version": "0.0.1",
-    "private": true,
-    "dependencies": {
-        "aws-amplify": "^3.3.20",
-        "next": "^11.0.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-markdown": "^5.0.3"
-    },
-    "devDependencies": {
-        "@types/node": "^12.0.0",
-        "@types/react": "^16.9.53",
-        "@types/react-dom": "^16.9.8",
-        "@types/shelljs": "^0.8.8",
-        "autoprefixer": "^10.2.5",
-        "env-cmd": "10.0.1",
-        "eslint": "^7.29.0",
-        "eslint-config-next": "^11.0.1",
-        "eslint-config-prettier": "^8.3.0",
-        "node-fetch": "^2.6.1",
-        "postcss": "^8.2.15",
-        "prettier": "^2.3.2",
-        "prompt-sync": "^4.2.0",
-        "shelljs": "^0.8.3",
-        "tailwindcss": "^2.1.2",
-        "typescript": "^4.2.2"
-    },
-    "scripts": {
-        "dev": "NODE_OPTIONS='--inspect' next dev",
-        "lint": "next lint",
-        "build": "next build && next export",
-        "index-html": "node ./scripts/index_html",
-        "sync-s3": "env-cmd -e production node ./scripts/upload_bucket",
-        "compile-lambdas": "tsc -p backend/tsconfig.sam.json",
-        "sam-build": "env-cmd -e production node ./scripts/sam_build",
-        "sam-package": "env-cmd -e production node ./scripts/sam_package",
-        "sam-deploy": "env-cmd -e production node ./scripts/sam_deploy",
-        "deploy": "yarn run deploy:backend && yarn run deploy:frontend",
-        "deploy:backend": "yarn run compile-lambdas && yarn run sam-build && yarn run sam-deploy",
-        "deploy:frontend": "yarn run build && yarn run index-html && yarn run sync-s3",
-        "blog:get": "env-cmd -e production node ./scripts/blog_get_article",
-        "blog:post": "env-cmd -e production node ./scripts/blog_post_article"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+  "name": "john-wrights-personal-website",
+  "description": "A personal landing page and blog for John Wright Stanly",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "aws-amplify": "^3.3.20",
+    "next": "^11.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-markdown": "^5.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/shelljs": "^0.8.8",
+    "autoprefixer": "^10.2.5",
+    "env-cmd": "10.0.1",
+    "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "node-fetch": "^2.6.1",
+    "postcss": "^8.2.15",
+    "prettier": "^2.3.2",
+    "prompt-sync": "^4.2.0",
+    "shelljs": "^0.8.3",
+    "tailwindcss": "^2.1.2",
+    "typescript": "^4.2.2",
+    "typescript-json-schema": "^0.50.1"
+  },
+  "scripts": {
+    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "lint": "next lint",
+    "build": "next build && next export",
+    "index-html": "node ./scripts/index_html",
+    "sync-s3": "env-cmd -e production node ./scripts/upload_bucket",
+    "compile-lambdas": "tsc -p backend/tsconfig.sam.json",
+    "generate-schema": "typescript-json-schema --required --refs false --noExtraProps -o ./backend/types.schema.json  \"./lib/Types.d.ts\" \"*\"",
+    "sam-build": "env-cmd -e production node ./scripts/sam_build",
+    "sam-package": "env-cmd -e production node ./scripts/sam_package",
+    "sam-deploy": "env-cmd -e production node ./scripts/sam_deploy",
+    "deploy": "yarn run deploy:backend && yarn run deploy:frontend",
+    "deploy:backend": "yarn run compile-lambdas && yarn run generate-schema && yarn run sam-build && yarn run sam-deploy",
+    "deploy:frontend": "yarn run build && yarn run index-html && yarn run sync-s3",
+    "blog:get": "env-cmd -e production node ./scripts/blog_get_article",
+    "blog:post": "env-cmd -e production node ./scripts/blog_post_article"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
