--- a/backend/template.yml
+++ b/backend/template.yml
@@ -279,7 +279,7 @@ Resources:
   ContactLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: out/backend/src/contact.index
+      Handler: out/src/contact.index
       Description: Contact website owner with form
       Policies:
         - AWSLambdaBasicExecutionRole
