--- a/backend/template.yml
+++ b/backend/template.yml
@@ -113,7 +113,7 @@ Resources:
   GetArticleByTitleLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: handlers/blogLambdas.getArticleByTitle
+      Handler: out/src/getArticleByTitle.handler
       Description: Get the blog article given its URL encoded title
       Policies:
         - AWSLambdaBasicExecutionRole
@@ -132,7 +132,7 @@ Resources:
   UpsertArticleLambdaFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: handlers/blogLambdas.upsertArticle
+      Handler: out/src/upsertArticle.handler
       Description: Upsert a blog article
       Policies:
         - AWSLambdaBasicExecutionRole
