--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-markdown": "^5.0.3"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.7",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
