--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-markdown": "^5.0.3"
+    "react-markdown": "^5.0.3",
+    "react-syntax-highlighter": "^15.4.3"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.7",
