--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^7.29.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-unused-imports": "^1.1.2",
     "node-fetch": "^2.6.1",
     "postcss": "^8.2.15",
     "prettier": "^2.3.2",
