--- a/admin/electron-builder.yml
+++ b/admin/electron-builder.yml
@@ -1,6 +1,5 @@
-appId: com.example.nextron
-productName: My Nextron App
-copyright: Copyright © 2018 Yoshihide Shiono
+appId: com.example.jwstanly
+productName: Jwstanly
 directories:
   output: dist
   buildResources: resources
