--- a/admin/package.json
+++ b/admin/package.json
@@ -20,8 +20,8 @@
     "autoprefixer": "^10.3.5",
     "electron": "^15.0.0",
     "electron-builder": "^22.11.7",
-    "next": "^11.1.2",
-    "nextron": "^7.1.0",
+    "next": "12",
+    "nextron": "^8.1.0",
     "postcss": "^8.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
